Fixed navbar menu alignment at smaller resolutions

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ ul.nav-menu li a {
 
 
 #center-box {
-	width: 60%;
+	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 180px;
@@ -70,14 +70,12 @@ ul.nav-menu li a {
 
 #intro-img {
 	width: 45%;
-	height: 45%;
 	border-radius: 100%;
 	float: left;
 	display: block-inline;
 }
 
 #intro-text {
-	height: 45%;
 	width: 45%;
 	margin-left: 10px;
 	float: right;
@@ -116,7 +114,7 @@ ul.nav-menu li a {
 	ul.nav-menu {
 		width: 440px;
 		float: left;
-		margin-top: 10px;
+		margin: 10px 0 0 0;
 		display: block;
 	}
 
@@ -136,6 +134,7 @@ ul.nav-menu li a {
 		width: 80%;
 		margin-right: 10%;
 		margin-left: 10%;
+		margin-top: -5%;
 		display: block;
 	}
 
@@ -151,10 +150,17 @@ ul.nav-menu li a {
 
 	ul.nav-menu {
 		width: 300px;
-		margin-right: 15.6%;
-		margin-left: 15.6%;
-		margin-top: 10px;
+		margin-top: 5px;
 		display: block;
 	}
+
+	ul.nav-menu li {
+		margin-left: 10px;
+	}
+
+	#intro-img {
+		margin-top: -10%;
+	}
+
 }
 
